plang/testing/logs/false-incorrect/86/program86.p.p
yBoWj.

j.
cl Vz (ylbm SYbyw Ip2j (atlm x Fr d3t ttZ9) u) (BY) zWg.

m :- yZ H02; (kAv), (jhg (qCmQ8 X09f (f8Hr (as)) (C))), (n (CK) rOCX V6), gUFRt (dqCK7 i (HxCH)) RVJ; (r4 uqP yVG), vyi7 YgDS l W; (cIZ (oLpY (R) gX p ti) (aoJ rAPN) (g1zBn QTpL (rN) eI Yd6)); vtxCU j2o (vLM) (Wqf30); uD Jt Fhggx.
gZdmX (GHM) (vSr).


dP53 NKm :- x41Q.

v1wpk E4.
kT Ne0D (sBIaN (pjr5) lCoHN i yMJ).

uyVI (sAX UR qvny) :- ((p v TcBt (KOv) (rBLG4 b); fm, u7oh (X9gQ), qCJM (Fixc2) iIP2W), s (tz KL (L) (js8ct xhx (TGfYi) (Z0) (nFCK h2))) Wo5 wew AqG).
q eDF VNgup.


bhr1F (c3 (HuH) (K2) Sec qX) (cxYD (pBX3S GmJ hp) (J)) :- r (IQ) (xpuO WQ17 d5cgT (b (IG4) (M) WA)) EZZ u.


yLf (hP KX7s (Src) a (e99 (f ibY (vI0U (hyn J1 (qwU1C (uyH)) i9) (w9EoM p (U0O)))) ZK0)) PFI8G.


eV17K LYBZ (xj1 wvYip (CF)) q cGk :- tjt.

bs (K) G (ahMPF mK (PEpQ)) :- dwAMk (X0p) (AAx) (dlc5z); (soU hiwD (P9) (LgUf) (rmX6v H38XU (DVgRr) (u) eK)), e Lc1S (uWo PIq (N1)) z5p; g B O7 (xRn (bWTc R (B)) CoVu7 vw2 (HY)); kyaiP B (kcBJ cAm YdTi (w)) (lPy5P); iKa1O (NTQfD) RpC7, udCyR (l lulA (UpAM) VifP (fO N (Su) uF wHwfe)) dkQQI (U), psOHG qD3P (SDm77) (h v dqO QD3mT vdF) (l (FS) k3 (fQD dpQ5 (o) (RP81)) Jijct); (r); (q).

z2aB (Rof8D) N.


oOQRV (w).


? (((ujZ (Qmu)))).